Revision history for ExtUtils-Builder-Compiler

{{$NEXT}}

0.026     2025-03-28 12:37:34+01:00 Europe/Brussels
          - Add definition file to MSVC linker arguments

0.025     2025-03-16 23:03:34+01:00 Europe/Brussels
          - Add missing abs2rel import for module_for_xs delegate

0.024     2025-03-14 16:57:33+01:00 Europe/Brussels
          - Pass module name to prelink for loadable object

0.023     2025-03-13 16:34:20+01:00 Europe/Brussels
          - Restore module_for_xs delegate
          - Make module work on static perls
          - Allow for multiple profiles in compilation
          - Fix libpath argument in MSVC linker
          - Ignore manifest files on MSVC for now

0.022     2024-09-13 14:11:23+02:00 Europe/Brussels
          - Fix quiet argument of try_compile_run

0.021     2024-09-13 10:59:41+02:00 Europe/Brussels
          - Use tempdir correctly in try_compile_run
          - Add quiet argument to try_compile_run

0.020     2024-08-10 18:16:16+02:00 Europe/Brussels
          - Correctly pass lddlflags in Linker creation
          - Pass ld instead of cc to linker except on AIX

0.019     2024-08-05 21:04:22+02:00 Europe/Brussels
          - Revert critical breakage in try_compile_run

0.018     2024-08-05 16:00:45+02:00 Europe/Brussels
          - Add try_find_library_dirs_for
          - Fix find_libs_for to pass library correctly
          - Rename find_libs_for to find_libraries_for
          - Fix basename in try_compile_run

0.017     2024-08-04 20:57:12+02:00 Europe/Brussels
          - Fix missing prereq declarations
          - Remove superfluous debugging output in EUB::Conf

0.016     2024-08-01 12:55:40+02:00 Europe/Brussels
          - Add ExtUtils::Builder::Conf
          - Add typemap and hiertype arguments to parse-xs

0.015     2024-07-20 15:18:22+02:00 Europe/Brussels
          - Add exe_file helper to EU::B::Autodetect::C
          - Add missing argument in MSCV manifesting