@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Adapt to load_extension rename
 
 0.026     2025-03-28 12:37:34+01:00 Europe/Brussels
           - Add definition file to MSVC linker arguments
